--- a/euphoria-front/public/locales/az/translation.json
+++ b/euphoria-front/public/locales/az/translation.json
@@ -13,5 +13,21 @@
     "Forget your password": "Parolu unutdum",
     "Sign In": "Giriş",
     "Don’t have an account?": "Hesabınız yoxdur?",
-    "Sign up": "Qeydiyyatdan keç"
+    "Sign up": "Qeydiyyatdan keç",
+    "Reset Your Password": "Parolunuzu sıfırlayın",
+    "Enter your email and we`ll send you a link to reset your password.": "E-poçtunuzu daxil edin və biz sizə parolunuzu sıfırlamaq üçün link göndərəcəyik.",
+    "Please check it.": "Zəhmət olmasa yoxlayın.",
+    "Email": "E-poçt",
+    "Send": "Göndər",
+    "Back to": "Geriyə qayıt",
+    "T-shirt / Tops": "Köynək / Üstlər",
+    "Summer Value Pack": "Yay Dəyər Paketi",
+    "cool / colorful / comfy": "sərin / rəngli / rahat",
+    "Shop Now": "İndi al",
+    "Beyoung Presents": "Beyoung təqdim edir",
+    "Breezy Summer Style": "Külək yay tərzi",
+    "UPTO 50% OFF": "50%-ə qədər ENDİRİM",
+    "Low Price": "Aşağı qiymət",
+    "High Coziness": "Yüksək Rahatlıq",
+    "Explore Items": "Elementləri araşdırın"
 }
