--- a/euphoria-front/public/locales/en/translation.json
+++ b/euphoria-front/public/locales/en/translation.json
@@ -13,5 +13,15 @@
     "Forget your password": "Forget your password",
     "Sign In": "Sign In",
     "Don’t have an account?": "Don’t have an account?",
-    "Sign up": "Sign up"
+    "Sign up": "Sign up",
+    "T-shirt / Tops": "T-shirt / Tops",
+    "Summer Value Pack": "Summer Value Pack",
+    "cool / colorful / comfy": "cool / colorful / comfy",
+    "Shop Now": "Shop Now",
+    "Beyoung Presents": "Beyoung Presents",
+    "Breezy Summer Style": "Breezy Summer Style",
+    "UPTO 50% OFF": "UPTO 50% OFF",
+    "Low Price": "Low Price",
+    "High Coziness": "High Coziness",
+    "Explore Items": "Explore Items"
 }
