--- a/euphoria-front/public/locales/ru/translation.json
+++ b/euphoria-front/public/locales/ru/translation.json
@@ -13,5 +13,21 @@
     "Forget your password": "Забыли свой пароль",
     "Sign In": "Войти",
     "Don’t have an account?": "Нет аккаунта?",
-    "Sign up": "Зарегистрироваться"
+    "Sign up": "Зарегистрироваться",
+    "Reset Your Password": "Сбросить пароль",
+    "Enter your email and we`ll send you a link to reset your password.": "Введите свой адрес электронной почты, и мы вышлем вам ссылку для сброса пароля.",
+    "Please check it.": "Пожалуйста, проверь это.",
+    "Email": "Э-почта",
+    "Send": "Отправлять",
+    "Back to": "Вернись",
+    "T-shirt / Tops": "Футболка/Топы",
+    "Summer Value Pack": "Летний выгодный пакет",
+    "cool / colorful / comfy": "круто/красочно/комфортно",
+    "Shop Now": "Купить сейчас",
+    "Beyoung Presents": "Бэйонг представляет",
+    "Breezy Summer Style": "Ветреный летний стиль",
+    "UPTO 50% OFF": "СКИДКА ДО 50%",
+    "Low Price": "Низкая цена",
+    "High Coziness": "Высокий уют",
+    "Explore Items": "Исследовать предметы"
 }
