Home page update

--- a/euphoria-front/public/locales/az/translation.json
+++ b/euphoria-front/public/locales/az/translation.json
@@ -29,5 +29,43 @@
   "UPTO 50% OFF": "50%-ə qədər ENDİRİM",
   "Low Price": "Aşağı qiymət",
   "High Coziness": "Yüksək Rahatlıq",
-  "Explore Items": "Elementləri araşdırın"
+  "Explore Items": "Elementləri araşdırın",
+  "Need Help": "Kömək lazımdır",
+  "Contact Us": "Bizimlə əlaqə saxlayın",
+  "Track Order": "Sifarişi izlə",
+  "Returns & Refunds": "Geri qaytarmalar",
+  "FAQ`s": "Tez-tez soruşulanlar",
+  "Career": "Karyera",
+  "Company": "Şirkət",
+  "About Us": "Bizim haqqımızda",
+  "euphoria Blog": "euphoria Bloq",
+  "euphoriastan": "euphoriastan",
+  "Collaboration": "Əməkdaşlıq",
+  "Media": "Media",
+  "More Info": "Daha çox məlumat",
+  "Term and Conditions": "Müddət və Şərtlər",
+  "Privacy Policy": "Gizlilik Siyasəti",
+  "Shipping Policy": "Göndərmə Siyasəti",
+  "Sitemap": "Sayt xəritəsi",
+  "Location": "Məkan",
+  "Eklingpura Chouraha, Ahmedabad Main Road": "Eklingpura Chouraha, Əhmədabad Əsas Yolu",
+  "(NH 8- Near Mahadev Hotel) Udaipur, India- 313002": "(NH 8- Mahadev Otelinin yaxınlığında) Udaipur, Hindistan- 313002",
+  "Downlod The App": "Tətbiqi endirin",
+  "Popular Categories": "Populyar Kateqoriyalar",
+  "Knitted Joggers": "Trikotaj Joggers",
+  "Full Sleeve": "Tam Qol",
+  "Active T-Shirts": "Aktiv Köynəklər",
+  "Urban Shirts": "Şəhər Köynəkləri",
+  "Check Email": "E-mailnizi Yoxlayın",
+  "Please check your email inbox and click on the provided link to reset your password . If you don’t receive email": "Zəhmət olmasa, e-poçtun gələnlər qutusunu yoxlayın və parolunuzu sıfırlamaq üçün verilən linkə klikləyin. E-poçt almasanız",
+  "Click here to resend": "Yenidən göndərmək üçün bura klikləyin",
+  "Verify your code.": "Kodunuzu doğrulayın.",
+  "Verification Code": "Yoxlama Kodu",
+  "Verify Code": "Kodu Doğrulayın.",
+  "WE MADE YOUR EVERYDAY FASHION BETTER!": "BİZ SİZİN GÜNLÜK DƏBİNİZİ DAHA YAXŞI ETDİK!",
+  "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "Gündəlik dəbi təkmilləşdirmək səyahətimizdə eyforiya HƏR GÜNLÜK geyim çeşidini təqdim edir - Rahat və Sərfəli moda 24/7",
+  "Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.": "Müəllif hüququ © 2023 Euphoria Folks Pvt Ltd. Bütün hüquqlar qorunur.",
+  "Top Brands Deal": "Ən Yaxşı Brendlər Sövdələşməsi",
+  "Up To": "Qədər",
+  "off on brands": "markalarda endirim"
 }
