--- a/euphoria-front/public/locales/en/translation.json
+++ b/euphoria-front/public/locales/en/translation.json
@@ -1,27 +1,39 @@
 {
-    "Search": "Search",
-    "Login": "Login",
-    "Sign Up": "Sign Up",
-    "Sign In Page": "Sign In Page",
-    "Continue With Google": "Continue With Google",
-    "Continue With Twitter": "Continue With Twitter",
-    "OR": "OR",
-    "User name or email address": "User name or email address",
-    "Password": "Password",
-    "Show": "Show",
-    "Hide": "Hide",
-    "Forget your password": "Forget your password",
-    "Sign In": "Sign In",
-    "Don’t have an account?": "Don’t have an account?",
-    "Sign up": "Sign up",
-    "T-shirt / Tops": "T-shirt / Tops",
-    "Summer Value Pack": "Summer Value Pack",
-    "cool / colorful / comfy": "cool / colorful / comfy",
-    "Shop Now": "Shop Now",
-    "Beyoung Presents": "Beyoung Presents",
-    "Breezy Summer Style": "Breezy Summer Style",
-    "UPTO 50% OFF": "UPTO 50% OFF",
-    "Low Price": "Low Price",
-    "High Coziness": "High Coziness",
-    "Explore Items": "Explore Items"
+  "Search": "Search",
+  "Login": "Login",
+  "Sign Up": "Sign Up",
+  "Sign In Page": "Sign In Page",
+  "Continue With Google": "Continue With Google",
+  "Continue With Twitter": "Continue With Twitter",
+  "OR": "OR",
+  "User name or email address": "User name or email address",
+  "Password": "Password",
+  "Show": "Show",
+  "Hide": "Hide",
+  "Forget your password": "Forget your password",
+  "Sign In": "Sign In",
+  "Don’t have an account?": "Don’t have an account?",
+  "Sign up": "Sign up",
+  "T-shirt / Tops": "T-shirt / Tops",
+  "Summer Value Pack": "Summer Value Pack",
+  "cool / colorful / comfy": "cool / colorful / comfy",
+  "Shop Now": "Shop Now",
+  "Beyoung Presents": "Beyoung Presents",
+  "Breezy Summer Style": "Breezy Summer Style",
+  "UPTO 50% OFF": "UPTO 50% OFF",
+  "Low Price": "Low Price",
+  "High Coziness": "High Coziness",
+  "Explore Items": "Explore Items",
+  "Knitted Joggers": "Knitted Joggers",
+  "Full Sleeve": "Full Sleeve",
+  "Active T-Shirts": "Active T-Shirts",
+  "Urban Shirts": "Urban Shirts",
+  "Check Email": "Check Email",
+  "Please check your email inbox and click on the provided link to reset your password . If you don’t receive email": "Please check your email inbox and click on the provided link to reset your password . If you don’t receive email",
+  "Click here to resend": "Click here to resend",
+  "Verify your code.": "Verify your code.",
+  "Verification Code": "Verification Code",
+  "Verify Code": "Verify Code.",
+  "WE MADE YOUR EVERYDAY FASHION BETTER!": "WE MADE YOUR EVERYDAY FASHION BETTER!",
+  "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7"
 }
