--- a/euphoria-front/public/locales/ru/translation.json
+++ b/euphoria-front/public/locales/ru/translation.json
@@ -29,5 +29,43 @@
     "UPTO 50% OFF": "СКИДКА ДО 50%",
     "Low Price": "Низкая цена",
     "High Coziness": "Высокий уют",
-    "Explore Items": "Исследовать предметы"
+    "Explore Items": "Исследовать предметы",
+    "Need Help": "Нужна помощь",
+    "Contact Us": "Связаться с нами",
+    "Track Order": "Отследить заказ",
+    "Returns & Refunds": "Возврат и возмещение",
+    "FAQ`s": "Часто задаваемые вопросы",
+    "Career": "Карьера",
+    "Company": "Компания",
+    "About Us": "О нас",
+    "euphoria Blog": "euphoria Блог",
+    "euphoriastan": "euphoriastan",
+    "Collaboration": "Сотрудничество",
+    "Media": "СМИ",
+    "More Info": "Больше информации",
+    "Term and Conditions": "Срок и условия",
+    "Privacy Policy": "политика конфиденциальности",
+    "Shipping Policy": "Политика доставки",
+    "Sitemap": "Карта сайта",
+    "Location": "Расположение",
+    "Eklingpura Chouraha, Ahmedabad Main Road": "Эклингпура Чураха, главная дорога Ахмедабада",
+    "(NH 8- Near Mahadev Hotel) Udaipur, India- 313002": "(NH 8- Рядом с отелем Mahadev), Удайпур, Индия- 313002",
+    "Downlod The App": "Загрузите приложение",
+    "Popular Categories": "Популярные категории",
+    "Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.": "© Euphoria Folks Pvt Ltd., 2023. Все права защищены.",
+    "Knitted Joggers": "Вязаные Джоггеры",
+    "Full Sleeve": "Полный Рукав",
+    "Active T-Shirts": "Активные Футболки",
+    "Urban Shirts": "Городские Рубашки",
+    "Check Email": "Проверить Электронную Почту",
+    "Please check your email inbox and click on the provided link to reset your password . If you don’t receive email": "Пожалуйста, проверьте свой почтовый ящик и нажмите на предоставленную ссылку, чтобы сбросить пароль. Если вы не получаете электронное письмо",
+    "Click here to resend": "Нажмите здесь, чтобы отправить повторно",
+    "Verify your code.": "Проверьте свой код.",
+    "Verification Code": "Проверочный Код",
+    "Verify Code": "Проверить Код",
+    "WE MADE YOUR EVERYDAY FASHION BETTER!": "МЫ СДЕЛАЛИ ВАШУ ПОВСЕДНЕВНУЮ МОДУ ЛУЧШЕ!",
+    "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "На пути к улучшению повседневной моды компания euphoria представляет линейку одежды EVERYDAY – Удобная и доступная мода 24/7. ",
+    "Top Brands Deal": "Лучшее предложение брендов",
+    "Up To": "До",
+    "off on brands": "скидка на марки"
 }
