checkout page add

--- a/euphoria-front/public/locales/ru/translation.json
+++ b/euphoria-front/public/locales/ru/translation.json
@@ -67,5 +67,16 @@
     "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "На пути к улучшению повседневной моды компания euphoria представляет линейку одежды EVERYDAY – Удобная и доступная мода 24/7. ",
     "Top Brands Deal": "Лучшее предложение брендов",
     "Up To": "До",
-    "off on brands": "скидка на марки"
+    "off on brands": "скидка на марки",
+    "Clothing for Women Online in India":"Одежда для женщин онлайн в Индии",
+    "Reexplore Women's Clothing Collection Online at Euphoria":"Откройте для себя новую коллекцию женской одежды онлайн на сайте Euphoria",
+    "Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,":"Женская одежда. Вы ищете лучший сайт, где можно купить женскую одежду онлайн в Индии? Что ж, на этом ваши поиски самой крутой и стильной женской одежды заканчиваются. От модной повседневной женской одежды в Интернете до женской одежды из хлопка премиум-качества.",
+    "Euphoria":"Euphoria",
+    "has closet of Women Collection covered with the latest and best designs of Women's Clothing Online":"В шкафу женской коллекции представлены новейшие и лучшие модели женской одежды в Интернете.",
+    "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.":"Наша коллекция женской одежды сделает вас законодателем моды с легендарным выбором женской одежды.",
+    "One-Stop Destination to Shop Every Clothing for Women: Euphoria":"Универсальное место для покупки любой одежды для женщин: Euphoria",
+    "Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,":"Сегодня все большую популярность набирает прежде всего одежда для женщин. Это потому, что прошли те времена, когда женщины привыкли носить неудобную моду. Сегодня женщина выглядит красивее, когда она одета в удобную повседневную женскую одежду. Что касается этого,",
+    "has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.":"имеет большой ассортимент стильной женской одежды, которая сделает ее победительницей, куда бы она ни пошла.",
+    "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ":"Наша коллекция женской одежды сделает вас законодателем моды с легендарным выбором женской одежды. Совершенно очевидно, что существует очень мало интернет-магазинов женской одежды, где вы можете купить одежду Western Wear для женщин, состоящую из материалов премиум-класса и элегантного дизайна, которые вы всегда ищете. По сути,",
+    "See More":"Узнать больше"
 }
