--- a/euphoria-front/public/locales/az/translation.json
+++ b/euphoria-front/public/locales/az/translation.json
@@ -67,5 +67,16 @@
   "Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.": "Müəllif hüququ © 2023 Euphoria Folks Pvt Ltd. Bütün hüquqlar qorunur.",
   "Top Brands Deal": "Ən Yaxşı Brendlər Sövdələşməsi",
   "Up To": "Qədər",
-  "off on brands": "markalarda endirim"
+  "off on brands": "markalarda endirim",
+  "Clothing for Women Online in India":"Hindistanda Qadınlar üçün Onlayn Geyim",
+  "Reexplore Women's Clothing Collection Online at Euphoria":"Euphoria-da Qadın Geyimləri Kolleksiyasını onlayn kəşf edin",
+  "Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,":"Qadın Geyimləri - Hindistanda Qadınlar üçün Geyimləri onlayn almaq üçün ən yaxşı veb saytı axtarırsınız? Ən gözəl və ən dəbli qadın geyimləri axtarışınız burada başa çatır. Dəbli Gündəlik Qadın geyimləri onlayn alış-verişindən yüksək keyfiyyətli pambıq qadın geyimlərinə qədər,",
+  "Euphoria":"Euphoria",
+  "has closet of Women Collection covered with the latest and best designs of Women's Clothing Online":"Qadın Geyimləri Online-ın ən son və ən yaxşı dizaynları ilə örtülmüş Qadın Kolleksiyasının şkafına malikdir",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.":"Qadınlar üçün geyim kolleksiyamız sizi Qadın Geyimində ikonik seçim oxşarlığı ilə trend təyin edəcək.",
+  "One-Stop Destination to Shop Every Clothing for Women: Euphoria":"Qadınlar üçün hər geyimi almaq üçün bir pəncərə: Euphoria",
+  "Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,":"Bu gün Qadınlar üçün Geyim hər şeydən əvvəl daha çox populyarlıq qazanır. Bunun səbəbi qadınların narahat moda daşımağa öyrəşdiyi dövrlər geridə qaldı. Bu gün bir xanım rahat paltar olan Gündəlik Qadın Geyimində olduqda daha gözəl görünür. Bununla bağlı,",
+  "has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.":"getdiyi yerdə onu qalib edəcək Qəşəng Qadın Geyimlərinin geniş çeşidinə malikdir.",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ":"Qadınlar üçün geyim kolleksiyamız sizi Qadın Geyimində ikonik seçim oxşarlığı ilə trend təyin edəcək. Tamamilə aydındır ki, həmişə axtardığınız premium materialdan və zərif dizayndan ibarət Qadınlar üçün Western Wear ala biləcəyiniz Qadın Geyimləri onlayn mağazalarının çox az olduğunu söyləmək olar. Əsasən,",
+  "See More":"Daha çox Gör"
 }
