--- a/euphoria-front/public/locales/en/translation.json
+++ b/euphoria-front/public/locales/en/translation.json
@@ -35,5 +35,16 @@
   "Verification Code": "Verification Code",
   "Verify Code": "Verify Code.",
   "WE MADE YOUR EVERYDAY FASHION BETTER!": "WE MADE YOUR EVERYDAY FASHION BETTER!",
-  "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7"
+  "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7": "In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range - Comfortable & Affordable fashion 24/7",
+  "Clothing for Women Online in India":"Clothing for Women Online in India",
+  "Reexplore Women's Clothing Collection Online at Euphoria":"Reexplore Women's Clothing Collection Online at Euphoria",
+  "Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,":"Women's Clothing – Are you searching for the best website to buy Clothing for Women online in India? Well, your search for the coolest and most stylish womens clothing ends here. From trendy Casual Womens Wear Online shopping to premium quality cotton women's apparel,",
+  "Euphoria":"Euphoria",
+  "has closet of Women Collection covered with the latest and best designs of Women's Clothing Online":"has closet of Women Collection covered with the latest and best designs of Women's Clothing Online",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.":"Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear.",
+  "One-Stop Destination to Shop Every Clothing for Women: Euphoria":"One-Stop Destination to Shop Every Clothing for Women: Euphoria",
+  "Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,":"Today, Clothing for Women is gaining more popularity above all. This is because gone are the days when women were used to carrying uncomfortable fashion. Today, a lady looks prettier when she is in Casual Womens Wear which is a comfortable outfit. Concerning this,",
+  "has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.":"has a big fat range of Stylish Women's Clothing that would make her the winner wherever she goes.",
+  "Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ":"Our collection of clothes for women will make you the trendsetter with an iconic resemblance of choice in Womens Wear. It is quite evident to say that there are very few Womens Clothing online stores where you can buy Western Wear for Women comprising the premium material and elegant design that you are always seeking for. Basically, ",
+  "See More":"See More"
 }
